Bug 1115264 - Fix -Wsometimes-uninitialized clang warning in nsRubyFrame.cpp. r=dholbert